Fix scroll behavior while link modal is open on mobile

--- a/src/components/Resume/ProjectLinks.module.css
+++ b/src/components/Resume/ProjectLinks.module.css
@@ -20,6 +20,7 @@
   margin: 0;
 }
 .subheader h4 {
+  font-size: 1.3rem;
   margin: 0 1rem 0 0;
 }
 
